--- a/advance2/simple-directx9/simple-directx9.vcxproj.filters
+++ b/advance2/simple-directx9/simple-directx9.vcxproj.filters
@@ -23,6 +23,9 @@
     <FxCompile Include="simple.fx">
       <Filter>リソース ファイル</Filter>
     </FxCompile>
+    <FxCompile Include="simple2.fx">
+      <Filter>リソース ファイル</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
